--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@
                     <section class="section portvend"><span></span></section>
                     <section>
                         <div class="dropplace">
-                            <img src="http://dummyimage.com/1522X600" alt="dropplace">
+                            <h3>미리보기</h3>
                         </div>
                     </section>
                 </div>
