--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
                         <div class="p2container">
                             <h1>Profile</h1>
                             <div class="content">
-                                <img src="http://dummyimage.com/300X400" alt="image">
+                                <div class="contimage">image</div>
                                 <div class="innercontent">
                                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod voluptatum facilis, quae repellendus, ipsam repellat eaque necessitatibus, dicta vitae saepe illum iusto obcaecati molestias labore perferendis beatae harum aspernatur eveniet.</p>
                                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod voluptatum facilis, quae repellendus, ipsam repellat eaque necessitatibus, dicta vitae saepe illum iusto obcaecati molestias labore perferendis beatae harum aspernatur eveniet.</p>
@@ -223,7 +223,7 @@
                         <div class="p2container">
                             <h1>Profile</h1>
                             <div class="content">
-                                <img src="http://dummyimage.com/300X400" alt="image">
+                                <div class="contimage">image</div>
                                 <div class="innercontent">
                                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod voluptatum facilis, quae repellendus, ipsam repellat eaque necessitatibus, dicta vitae saepe illum iusto obcaecati molestias labore perferendis beatae harum aspernatur eveniet.</p>
                                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod voluptatum facilis, quae repellendus, ipsam repellat eaque necessitatibus, dicta vitae saepe illum iusto obcaecati molestias labore perferendis beatae harum aspernatur eveniet.</p>
